RESOLVED FIXED156354
Clearing the application cache doesn't work.
https://bugs.webkit.org/show_bug.cgi?id=156354
Summary Clearing the application cache doesn't work.
Jeremy Jones
Reported 2016-04-07 12:22:35 PDT
Clearing the application cache doesn't work.
Attachments
Patch (2.96 KB, patch)
2016-04-07 12:24 PDT, Jeremy Jones
no flags
Patch (2.99 KB, patch)
2016-04-07 12:25 PDT, Jeremy Jones
bfulgham: review+
Path for Landing (2.99 KB, patch)
2016-04-07 16:31 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2016-04-07 12:24:20 PDT
Jeremy Jones
Comment 2 2016-04-07 12:25:15 PDT
Jeremy Jones
Comment 3 2016-04-07 12:26:33 PDT
Brent Fulgham
Comment 4 2016-04-07 15:20:36 PDT
Comment on attachment 275914 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=275914&action=review > Source/WebKit2/ChangeLog:10 > + Delete the caches, not just the entires. "entires" -> "entries"
Brent Fulgham
Comment 5 2016-04-07 15:21:14 PDT
Needs a WK2 review.
Brady Eidson
Comment 6 2016-04-07 16:22:12 PDT
Comment on attachment 275914 [details] Patch WK2 parts == okay
Brent Fulgham
Comment 7 2016-04-07 16:23:02 PDT
Comment on attachment 275914 [details] Patch r=me, WK2 r=brady.
Jeremy Jones
Comment 8 2016-04-07 16:31:09 PDT
Created attachment 275953 [details] Path for Landing
WebKit Commit Bot
Comment 9 2016-04-07 17:19:46 PDT
Comment on attachment 275953 [details] Path for Landing Clearing flags on attachment: 275953 Committed r199204: <http://trac.webkit.org/changeset/199204>
Note You need to log in before you can comment on or make changes to this bug.