Clearing the application cache doesn't work. https://bugs.webkit.org/show_bug.cgi?id=156354 rdar://problem/22369239

Patch by Jeremy Jones <jeremyj@apple.com> on 2016-04-07
Reviewed by Brady Eidson.

Use the correct "ApplicationCache" directory.
Delete the caches, not just the entries.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::fetchData):
(WebKit::WebsiteDataStore::removeData):

Canonical link: https://commits.webkit.org/174473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199204 268f45cc-cd09-0410-ab3c-d52691b4dbfc